<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appnaam">Repair Now</string>
    <string name="email">E-mailadres</string>
    <string name="inloggen">Inloggen</string>
    <string name="registreren">Registreren</string>
    <string name="wachtwoord">Wachtwoord</string>
    <string name="loginknop">LOGIN</string>
    <string name="welkom">Welkom!</string>
    <string name="uitloggen">Uitloggen</string>
    <string name="registerknop">REGISTREER</string>
    <string name="naarregister">Geen account? Registreer hier</string>
    <string name="algeregistreerd">Heb je al een account? Ga terug</string>
    <string name="naam">Naam</string>
    <string name="klant">Klant</string>
    <string name="mechanieker">Mechanieker</string>
    <string name="telefoon">Telefoonnummer</string>


    <!-- nav menu !-->
    <string name="probleem">Probleem aanmaken</string>
    <string name="profiel">Mijn profiel</string>
    <string name="homepage">Homepagina</string>
    <string name="pasaaninfo">Gegevens aanpassen</string>
    <string name="pasaanww">Wachtwoord aanpassen</string>
    <string name="aanpassen">Aanpassen</string>
    <string name="oldww">Oude wachtwoord</string>
    <string name="newww">Nieuwe wachtwoord</string>
    <string name="maakaan">Probleem aanmaken</string>
    <string name="merk">Automerk</string>
    <string name="model">Model</string>
    <string name="brandstof">Brandstof</string>
    <string name="motor">Motor(cc)</string>
    <string name="omschrijving">Beschrijving van je probleem</string>
    <string name="title_activity_maps">Map</string>
    <string name="probleemremove">Probleem verwijderen</string>
    <string name="emtpy"> </string>
    <string name="aanvaarden">Aanvaarden</string>
    <string name="whomadeit">Gemaakt door:</string>
    <string name="brandenmotor">Brandstof &amp; motorinhoud:</string>
    <string name="telefoonnummer">Telefoonnummer:</string>
    <string name="geaccepteerd">Geaccepteerd</string>
    <string name="adres">Adres &amp; Postcode </string>

</resources>