<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:background="@color/fragbg"
    tools:context=".profiel">

  <TextView
      android:id="@+id/infoupdate"
      style="?android:listSeparatorTextViewStyle"
      android:text="@string/pasaaninfo"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/zwart"
      android:textColorHint="@color/zwart" />

  <EditText
      android:id="@+id/naam"
      android:hint="@string/naam"
      android:inputType="textPersonName"
      android:layout_marginBottom="10sp"
      android:textColorHint="@color/zwart"
      android:textColor="@color/zwart"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

  <EditText
      android:id="@+id/email"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:layout_marginBottom="10dp"
      android:textColorHint="@color/zwart"
      android:textColor="@color/zwart"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" />

  <RadioGroup
      android:id="@+id/keuze"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <RadioButton
        android:id="@+id/klant"
        android:textColor="@color/zwart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/klant"
        android:checked="true" />

    <RadioButton
        android:id="@+id/mechanieker"
        android:textColor="@color/zwart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mechanieker"
        android:checked="false" />

  </RadioGroup>

  <Button
      android:id="@+id/aanpassen"
      android:layout_marginTop="15dp"
      android:background="@drawable/rondeknop"
      android:text="@string/aanpassen"
      android:textColor="@color/wit"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"/>

</LinearLayout>